--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
+# Go -----------------------------------------------------------------------------------------------
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -19,3 +20,19 @@
 
 # Go workspace file
 go.work
+
+# macOS --------------------------------------------------------------------------------------------
+# https://mrkandreev.name/snippets/gitignore-generator/#macOS
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# iCloud generated files
+*.icloud
